<resources>
    <string name="app_name">Logopedie app</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kinderen">Overzicht kinderen</string>
    <string name="title_activity_meting">Meting</string>
    <string name="title_activity_kinderen_edit">Aanpassen kind</string>
    <string name="title_activity_oef1">Oefening 1</string>
    <string name="title_activity_oef2">Oefening 2</string>
    <string name="title_activity_oef3">Oefening 3</string>
    <string name="title_activity_preteaching_plaat">Preteachingplaat</string>
    <string name="title_activity_oef4">Oefening 4</string>
    <string name="title_activity_oef5">Oefening 5</string>
    <string name="title_activity_overzicht_lijst_kinderen">Overzicht Kinderen</string>
    <string name="title_activity_overzicht_sessie">Sessie overzicht</string>
    <string name="groep">Groep</string>
    <string name="gemiddelde">Gemiddelde</string>
    <string name="overzicht_sessie_meting">Meting</string>
    <string name="overzicht_sessie_oef2">Oefening 2</string>
    <string name="overzicht_sessie_oef3">Oefening 3</string>
    <string name="overzicht_sessie_oef4">Oefening 4</string>
    <string name="overzicht_sessie_oef5">Oefening 5</string>
    <string name="overzicht_sessie_oef6.1">Oefening 6.1</string>
    <string name="overzicht_sessie_oef6.2">Oefening 6.2</string>
    <string name="overzicht_sessie_oef6.3">Oefening 6.3</string>
    <string name="title_activity_overzicht_oefening">Overzicht Oefening</string>
    <string name="juist">Juist</string>
    <string name="fout">Fout</string>
    <string name="title_activity_oef6">Oefening 6</string>
    <string name="title_activity_sessie_einde">Einde sessie</string>
    <string name="einde_sessie">De sessie is voltooid. Klik hieronder om verder te gaan</string>
    <string name="title_activity_oef62">Oefening 6.2</string>
    <string name="title_activity_oef63">Oefening 6.3</string>
</resources>
