<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.OverzichtSessie"
    tools:showIn="@layout/activity_overzicht_sessie">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/overzicht_sessie_naam"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overzicht_sessie_groep"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View style="@style/overzicht_seperation_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:onClick="onClickOverzichtSessieMeting">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_meting" />
                <TextView
                    android:id="@+id/overzicht_sessie_meting_juist"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="2"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef2" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef2_gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="3"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef3" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef3_gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="4"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef4" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef4_gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="5"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef5" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef5_gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="6"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef6.1" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef6.1gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="7"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef6.2" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef6.2gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

            <View style="@style/overzicht_seperation_line" />

            <LinearLayout
                style="@style/overzicht_oefening_item"
                android:tag="8"
                android:onClick="onClickOverzichtSessieOefening">
                <TextView
                    style="@style/overzicht_oefening_titel"
                    android:text="@string/overzicht_sessie_oef6.3" />
                <TextView
                    android:id="@+id/overzicht_sessie_oef6.3gem"
                    style="@style/overzicht_oefening_score" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>